<resources>
    <string name="app_name">MyCalculator</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_del">DEL</string>
    <string name="button_lBracket">(</string>
    <string name="button_rBracket">)</string>
    <string name="button_div">/</string>
    <string name="button_changetheme">theme</string>
    <string name="button_sqr">x^2</string>
    <string name="button_cube">x^3</string>
    <string name="button_multiply">*</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_minus">-</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_plus">+</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_dot">.</string>
    <string name="button_0">0</string>
    <string name="button_equal">=</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
</resources>