<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="horizontal">
    <TextView
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="4" />
    <TextView
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="3" />
    <Button
        android:text="@string/button_clear"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_del"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_lBracket"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_rBracket"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_div"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_percent"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_sqr"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_cube"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_multiply"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_minus"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_4"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_5"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>
    <Button
        android:text="@string/button_6"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>
    <Button
        android:text="@string/button_plus"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_rowSpan="2" />
    <Button
        android:text="@string/button_7"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_8"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_9"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_dot"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1" />
    <Button
        android:text="@string/button_equal"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2" />

</GridLayout>